[package]
name = "crabbot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
color-eyre = "0.6.3"
http = "1.1.0"
mime = "0.3.17"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
ed25519-dalek = "2.1.1"
thiserror = "1.0.63"
http-body-util = "0.1.2"
serde_repr = "0.1.19"
